# next-spider-api

./: .gitignore  app.py  pyproject.toml
common/: constants.py  depends.py  utils.py
crawler/: pipelines.py  settings.py
crawler/model/: book.py
crawler/spiders/: book_spider.py
data/: spider.db  spider.db-shm  spider.db-wal
domain/: book.py  domain_code_generate.py  export.py  product.py  task.py  users.py
providers/: __init__.py  login.py
routes/: __init__.py  book.py  export.py  spider.py  task.py  user.py
