[tool.poetry]
name = "next-spider-api"
version = "0.1.0"
description = "spider api help to manager crawler"
authors = ["Jet Qin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scrapy = "^2.11.2"
fastapi = "^0.111.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.21.3"}
bcrypt = "^4.1.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
